// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts index (Left Nav) snapshot matches snapshot with a few account with one selected 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <div />
      <nav
        className="MuiList-root MuiList-dense MuiList-padding MuiList-subheader"
      >
        <div
          className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
        >
          Accounts
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="New account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/new"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="New account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
        <ul
          className="MuiList-root MuiList-dense MuiList-padding"
        >
          <div>
            <li
              className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
              disabled={false}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <InstitutionIcon
                  institution="BMO"
                  size="small"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
                title="BMO"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
                >
                  BMO
                </span>
              </div>
            </li>
            <ul
              className="MuiList-root MuiList-dense MuiList-padding"
            >
              <li
                className="MuiListItem-container"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
                  href="/accounts/3/transactions"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="MuiListItemText-root MuiListItemText-dense"
                  >
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      $3,000.00
                    </p>
                  </div>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <div
                  className="MuiListItemSecondaryAction-root"
                >
                  <a
                    aria-describedby={null}
                    aria-disabled={false}
                    aria-label="Edit account"
                    className="MuiButtonBase-root MuiIconButton-root"
                    href="/accounts/3/edit"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Edit account"
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </li>
            </ul>
          </div>
          <div>
            <li
              className="MuiListItem-container"
            >
              <div
                className="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
                disabled={false}
              >
                <div
                  className="MuiListItemIcon-root"
                >
                  <InstitutionIcon
                    institution="Coinbase"
                    size="small"
                  />
                </div>
                <div
                  className="MuiListItemText-root MuiListItemText-dense"
                  title="Coinbase"
                >
                  <span
                    className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
                  >
                    Coinbase
                  </span>
                </div>
              </div>
              <div
                className="MuiListItemSecondaryAction-root"
              >
                <a
                  aria-describedby={null}
                  aria-disabled={false}
                  aria-label="Edit API details"
                  className="MuiButtonBase-root MuiIconButton-root"
                  href="/institutions/Coinbase/import/0/edit"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Edit API details"
                >
                  <span
                    className="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h20v20H0V0z"
                        fill="none"
                        transform="scale(1.2, 1.2)"
                      />
                      <path
                        d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"
                        transform="scale(1.2, 1.2)"
                      />
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </li>
            <ul
              className="MuiList-root MuiList-dense MuiList-padding"
            >
              <a
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button"
                href="/accounts/4/transactions"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="MuiListItemText-root MuiListItemText-dense"
                >
                  <p
                    className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                  >
                    BTC 0.00
                  </p>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </a>
            </ul>
          </div>
          <div>
            <li
              className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
              disabled={false}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <InstitutionIcon
                  institution="TD"
                  size="small"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
                title="TD"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
                >
                  TD
                </span>
              </div>
            </li>
            <ul
              className="MuiList-root MuiList-dense MuiList-padding"
            >
              <li
                className="MuiListItem-container"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
                  href="/accounts/1/transactions"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="MuiListItemText-root MuiListItemText-dense"
                  >
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      CA$1,000.00
                    </p>
                  </div>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <div
                  className="MuiListItemSecondaryAction-root"
                >
                  <a
                    aria-describedby={null}
                    aria-disabled={false}
                    aria-label="Edit account"
                    className="MuiButtonBase-root MuiIconButton-root"
                    href="/accounts/1/edit"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Edit account"
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </li>
              <li
                className="MuiListItem-container"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
                  href="/accounts/2/transactions"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="MuiListItemText-root MuiListItemText-dense"
                  >
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      CA$2,000.00
                    </p>
                  </div>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <div
                  className="MuiListItemSecondaryAction-root"
                >
                  <a
                    aria-describedby={null}
                    aria-disabled={false}
                    aria-label="Edit account"
                    className="MuiButtonBase-root MuiIconButton-root"
                    href="/accounts/2/edit"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Edit account"
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </li>
            </ul>
          </div>
        </ul>
      </nav>
    </div>
  </div>
  <div />
</div>
`;

exports[`Accounts index (Left Nav) snapshot matches with a few accounts but none selected 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <div />
      <nav
        className="MuiList-root MuiList-dense MuiList-padding MuiList-subheader"
      >
        <div
          className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
        >
          Accounts
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="New account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/new"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="New account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
        <ul
          className="MuiList-root MuiList-dense MuiList-padding"
        >
          <div>
            <li
              className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
              disabled={false}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <InstitutionIcon
                  institution="BMO"
                  size="small"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
                title="BMO"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
                >
                  BMO
                </span>
              </div>
            </li>
            <ul
              className="MuiList-root MuiList-dense MuiList-padding"
            >
              <li
                className="MuiListItem-container"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
                  href="/accounts/3/transactions"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="MuiListItemText-root MuiListItemText-dense"
                  >
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      $3,000.00
                    </p>
                  </div>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <div
                  className="MuiListItemSecondaryAction-root"
                >
                  <a
                    aria-describedby={null}
                    aria-disabled={false}
                    aria-label="Edit account"
                    className="MuiButtonBase-root MuiIconButton-root"
                    href="/accounts/3/edit"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Edit account"
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </li>
            </ul>
          </div>
          <div>
            <li
              className="MuiListItem-container"
            >
              <div
                className="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
                disabled={false}
              >
                <div
                  className="MuiListItemIcon-root"
                >
                  <InstitutionIcon
                    institution="Coinbase"
                    size="small"
                  />
                </div>
                <div
                  className="MuiListItemText-root MuiListItemText-dense"
                  title="Coinbase"
                >
                  <span
                    className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
                  >
                    Coinbase
                  </span>
                </div>
              </div>
              <div
                className="MuiListItemSecondaryAction-root"
              >
                <a
                  aria-describedby={null}
                  aria-disabled={false}
                  aria-label="Edit API details"
                  className="MuiButtonBase-root MuiIconButton-root"
                  href="/institutions/Coinbase/import/0/edit"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Edit API details"
                >
                  <span
                    className="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h20v20H0V0z"
                        fill="none"
                        transform="scale(1.2, 1.2)"
                      />
                      <path
                        d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"
                        transform="scale(1.2, 1.2)"
                      />
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </li>
            <ul
              className="MuiList-root MuiList-dense MuiList-padding"
            >
              <a
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button"
                href="/accounts/4/transactions"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="MuiListItemText-root MuiListItemText-dense"
                >
                  <p
                    className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                  >
                    BTC 0.00
                  </p>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </a>
            </ul>
          </div>
          <div>
            <li
              className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
              disabled={false}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <InstitutionIcon
                  institution="TD"
                  size="small"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
                title="TD"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
                >
                  TD
                </span>
              </div>
            </li>
            <ul
              className="MuiList-root MuiList-dense MuiList-padding"
            >
              <li
                className="MuiListItem-container"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
                  href="/accounts/1/transactions"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="MuiListItemText-root MuiListItemText-dense"
                  >
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      CA$1,000.00
                    </p>
                  </div>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <div
                  className="MuiListItemSecondaryAction-root"
                >
                  <a
                    aria-describedby={null}
                    aria-disabled={false}
                    aria-label="Edit account"
                    className="MuiButtonBase-root MuiIconButton-root"
                    href="/accounts/1/edit"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Edit account"
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </li>
              <li
                className="MuiListItem-container"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
                  href="/accounts/2/transactions"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="MuiListItemText-root MuiListItemText-dense"
                  >
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      CA$2,000.00
                    </p>
                  </div>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <div
                  className="MuiListItemSecondaryAction-root"
                >
                  <a
                    aria-describedby={null}
                    aria-disabled={false}
                    aria-label="Edit account"
                    className="MuiButtonBase-root MuiIconButton-root"
                    href="/accounts/2/edit"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Edit account"
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </li>
            </ul>
          </div>
        </ul>
      </nav>
    </div>
  </div>
  <div />
</div>
`;

exports[`Accounts index (Left Nav) snapshot matches with no accounts 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <div />
      <nav
        className="MuiList-root MuiList-dense MuiList-padding MuiList-subheader"
      >
        <div
          className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
        >
          Accounts
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="New account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/new"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="New account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiTypography-root MuiTypography-caption"
        >
          You don't have any accounts yet
        </div>
      </nav>
    </div>
  </div>
  <div />
</div>
`;
